--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^2.0.1",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.14",
@@ -29,7 +30,6 @@
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "eslint-plugin-simple-import-sort": "^12.1.1",
